fix: missing pkgs

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "registry": "https://registry.npmjs.org"
   },
   "dependencies": {
+    "@jswork/next-abstract-request": "^1.0.4",
     "@tarojs/taro": "^3.2.1"
   }
 }
