--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "dependencies": {
     "@jswork/next-abstract-request": "^1.0.4",
+    "@jswork/next-interceptor": "^1.0.4",
     "@tarojs/taro": "^3.2.1"
   },
   "keywords": [
