refactor: big change/ use fetch-style implement

--- a/.npmignore
+++ b/.npmignore
@@ -6,18 +6,22 @@ test
 __tests__
 src
 build
+docs
 gulpfile.js
 
 .editorconfig
 .prettierrc
 Gemfile
 jest.config.js
+jest.setup.js
 LICENSE.txt
 Rakefile
-.vscode
+express.js
 .babelrc
+.vscode
 .release-it.json
-docs
+
 
 # vscode localhistory
 .history
+.release-it.json
