--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jswork/next-taro-request",
-  "version": "1.0.11",
+  "version": "1.1.0",
   "description": "Taro request for next.",
   "homepage": "https://github.com/afeiship/next-taro-request",
   "author": {
@@ -10,6 +10,7 @@
   "scripts": {
     "build": "gulp",
     "test": "jest",
+    "start": "node ./express.js",
     "release": "release-it"
   },
   "main": "dist/index.js",
@@ -22,14 +23,16 @@
     "del": "^6.0.0",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
-    "gulp-concat": "^2.6.1",
     "gulp-debug": "^4.0.0",
+    "gulp-header": "^2.0.9",
     "gulp-ignore": "^3.0.0",
     "gulp-load-plugins": "^2.0.6",
     "gulp-rename": "^2.0.0",
     "gulp-size": "^3.0.0",
     "gulp-uglify": "^3.0.2",
     "jest": "^26.6.3",
+    "jest-fetch-mock": "^3.0.3",
+    "prettier": "^2.2.1",
     "release-it": "^14.2.2",
     "uglify-js": "3.12.4",
     "uglify-save-license": "^0.4.1"
@@ -37,17 +40,5 @@
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org"
-  },
-  "dependencies": {
-    "@jswork/next-abstract-request": "^1.0.4",
-    "@jswork/next-content-type": "^1.0.2",
-    "@jswork/next-interceptor": "^1.0.4",
-    "@tarojs/taro": "^3.2.1"
-  },
-  "keywords": [
-    "next",
-    "taro",
-    "request",
-    "http"
-  ]
+  }
 }
