--- a/package.json
+++ b/package.json
@@ -40,5 +40,11 @@
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org"
-  }
+  },
+  "keywords": [
+    "next",
+    "taro",
+    "request",
+    "http"
+  ]
 }
