--- a/.gitignore
+++ b/.gitignore
@@ -4,10 +4,11 @@ coverage
 npm-debug.log
 yarn.lock
 package-lock.json
+pnpm-lock.yaml
 .DS_Store
 .idea
 .vscode
-
-# vscode localhistory
-.history
 dist
+
+.tmp
+docs
