--- a/.npmignore
+++ b/.npmignore
@@ -6,22 +6,16 @@ test
 __tests__
 src
 build
-docs
 gulpfile.js
 
 .editorconfig
 .prettierrc
-Gemfile
+.prettierignore
+.release-it.json
+typedoc.js
+tsconfig.json
 jest.config.js
-jest.setup.js
-LICENSE.txt
-Rakefile
-express.js
-.babelrc
-.vscode
-.release-it.json
-
-
-# vscode localhistory
-.history
-.release-it.json
+babel.config.js
+yarn-error.log
+yarn.lock
+tsup.config.ts
