--- a/package.json
+++ b/package.json
@@ -1,56 +1,31 @@
 {
-  "name": "@jswork/next-taro-request",
-  "version": "1.1.14",
-  "description": "Taro request for next.",
-  "homepage": "https://github.com/afeiship/next-taro-request",
-  "author": {
-    "name": "afei",
-    "email": "1290657123@qq.com"
-  },
+  "name": "@jswork/rtk-config-store",
+  "version": "1.0.0",
+  "description": "Redux toolkit config store with next.",
+  "main": "dist/index.cjs.js",
+  "module": "dist/index.esm.js",
+  "typings": "dist/index.d.ts",
   "scripts": {
-    "build": "gulp",
+    "build": "tsup",
     "test": "jest",
-    "start": "node ./express.js",
     "release": "release-it"
   },
-  "main": "dist/index.js",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.13.14",
-    "@babel/preset-env": "^7.13.12",
-    "@jswork/gulp-pkg-header": "^1.0.3",
-    "@jswork/next": "^1.0.5",
-    "del": "^6.0.0",
-    "gulp": "^4.0.2",
-    "gulp-babel": "^8.0.0",
-    "gulp-debug": "^4.0.0",
-    "gulp-header": "^2.0.9",
-    "gulp-ignore": "^3.0.0",
-    "gulp-load-plugins": "^2.0.6",
-    "gulp-rename": "^2.0.0",
-    "gulp-size": "^3.0.0",
-    "gulp-uglify": "^3.0.2",
-    "jest": "^26.6.3",
-    "jest-fetch-mock": "^3.0.3",
-    "prettier": "^2.2.1",
-    "release-it": "^14.2.2",
-    "uglify-js": "3.12.4",
-    "uglify-save-license": "^0.4.1"
+    "@jswork/next": "^1.2.2",
+    "@reduxjs/toolkit": "^2.0.1",
+    "@swc/core": "^1.3.101",
+    "@types/jest": "^29.5.0",
+    "@types/node": "^18.15.5",
+    "jest": "^29.5.0",
+    "react-redux": "^9.1.0",
+    "ts-jest": "^29.0.0-next.1",
+    "tsup": "^8.0.1",
+    "typescript": "^4.9.5"
   },
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org"
   },
-  "keywords": [
-    "next",
-    "taro",
-    "request",
-    "http"
-  ],
-  "peerDependencies": {
-    "@tarojs/taro": "^3.2.8"
-  },
-  "dependencies": {
-    "@jswork/next-json": "^1.0.2"
-  }
+  "dependencies": {}
 }
