--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jswork/rtk-config-store",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Redux toolkit config store with next.",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
@@ -18,6 +18,7 @@
     "@types/jest": "^29.5.0",
     "@types/node": "^18.15.5",
     "jest": "^29.5.0",
+    "react": "^18.2.0",
     "react-redux": "^9.1.0",
     "ts-jest": "^29.0.0-next.1",
     "tsup": "^8.0.1",
@@ -27,5 +28,11 @@
     "access": "public",
     "registry": "https://registry.npmjs.org"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "keywords": [
+    "next",
+    "taro",
+    "request",
+    "http"
+  ]
 }
