--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jswork/rtk-config-store",
-  "version": "1.0.1",
+  "version": "1.0.4",
   "description": "Redux toolkit config store with next.",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
@@ -33,6 +33,7 @@
     "next",
     "taro",
     "request",
-    "http"
+    "http",
+    "deprecated"
   ]
 }
