--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jswork/rtk-config-store",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "Redux toolkit config store with next.",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
@@ -32,10 +32,12 @@
     "redux-watch": "^1.2.0"
   },
   "keywords": [
-    "next",
-    "taro",
-    "request",
-    "http",
-    "deprecated"
+    "config",
+    "global",
+    "redux",
+    "rtk",
+    "state",
+    "store",
+    "toolkit"
   ]
 }
