--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "registry": "https://registry.npmjs.org"
   },
   "dependencies": {
+    "fast-deep-equal": "^3.1.3",
     "redux-watch": "^1.2.0"
   },
   "keywords": [
